--- a/seance1_CSS.css
+++ b/seance1_CSS.css
@@ -16,18 +16,27 @@ body {
 }
 
 th, td {
-    border: 2px solid #EB7F00;
+    border: 3px solid #ddb39a;
+    background-color: #EB7F00;
     padding: 10px;
     text-align: center;
-    width: 50px;
-    height: 50px;
+    width: 60px;
+    height: 60px;
+    font-size: 50px;
+    font-family: Consolas;
+    font-weight: bold;
+    color: white;
+    border-radius: 15px;
 }
 
 .table_c1 {
-    border: 2px solid #EB7F00;
-    border-collapse: collapse;
+    border: 5px solid #ddb39a;
+    border-radius: 12px;
+    border-collapse: separate;
     table-layout: fixed;
     margin: 20px auto;
+    font-size: 90%;
+    background-color: #ddb39a;
 }
 
 p {
