--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -1,7 +1,7 @@
 body {
     background-color: #F3FFE2;
     font-family: Helvetica, sans-serif;
-    padding: 5px;
+    margin: 10px;
 }
 
 .game {
@@ -13,11 +13,12 @@ body {
     color: #1695A3;
     text-align: center;
     font-size: 30px;
+    position: relative;
 }
 
 th, td {
     border: 3px solid #ddb39a;
-    background-color: #EB7F00;
+    background-color: antiquewhite;
     padding: 10px;
     text-align: center;
     width: 60px;
