--- a/style/mainStyle.css
+++ b/style/mainStyle.css
@@ -5,7 +5,11 @@ body {
 }
 
 .game {
-    margin-top: 8%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     text-align: center;
 }
 
@@ -23,20 +27,19 @@ th, td {
     text-align: center;
     width: 60px;
     height: 60px;
-    font-size: 50px;
-    font-family: Consolas;
+    font-size: calc(20vm + 20vh + 10vmin);
+    font-family: Consolas, sans-serif;
     font-weight: bold;
     color: white;
-    border-radius: 15px;
+    border-radius: 3px;
 }
 
 .table_c1 {
     border: 5px solid #ddb39a;
-    border-radius: 12px;
+    border-radius: 4px;
     border-collapse: separate;
     table-layout: fixed;
     margin: 20px auto;
-    font-size: 90%;
     background-color: #ddb39a;
 }
 
@@ -51,4 +54,57 @@ p {
 
 .score {
     font-size: xx-large;
+}
+
+.newGameButton, .newGameButton-loose {
+    background-color: #72ac74; /* Green */
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
+.newGameButton {
+    margin-top: 20px;
+}
+
+.newGameButton:hover, .newGameButton-loose:hover {
+    background-color: #4CAF50;
+    cursor: pointer;
+}
+
+#overlay {
+    position: fixed;
+    display: none;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 2;
+}
+
+#overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    font-size: 50px;
+    color: white;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+}
+
+.newGameButton-loose {
+    position: absolute;
+    top: 60%;
+    left: 50%;
+    font-size: 30px;
+    color: white;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
 }
